# Akatsumekusa-Aegisub-Scripts

./: .gitattributes  CONTRIBUTING.md  DependencyControl.json  LICENSE  LICENSE.Zlib  README.md
.github/workflows/: dependency-control-on-merge-to-dev.yml  dependency-control-on-merge.yml  dependency-control-on-workflow-dispatch.yml  nontomaticay-on-merge.yml  nontomaticay-on-workflow-dispatch.yml
.hooks/: requirements.txt
.hooks/hooks/: post-merge  pre-commit
docs/: NN.CJSpacing & NN.CJCharacter.md  Using aka.config and aka.config2.md  Using aka.config.md  Using aka.outcome.md  Using aka.singlesimple.md  Using aka.uikit.md  aae-export-smoothing-technical-details.md  aae-export-tutorial.md
macros/: NN.fanhua.lua  NN.farnhuah.lua  NN.switchst.lua  aka.99PercentTags.lua  aka.BackupProto.lua  aka.BackupSelection.lua  aka.BoundingBox.moon  aka.Colourtisalogue.moon  aka.Cycles.lua  aka.Cycles.moon  aka.InlineStorage.lua  aka.Sandbox.lua  aka.TimeLine.lua  aka.UnwhiteDialogue.moon  aka.dupe-and-not-comment.lua  aka.ortho-mo.lua
scripts/aae-export-install-dependencies/: aae-export-install-dependencies.pro  main.cpp  main.h  main.qml  process.cpp  process.h
scripts/aae-export-linux-x86_64/: LICENSE.MIT  generate.sh  libbase122.base64
scripts/aae-export-mac/: generate.sh  libbase122.base64
scripts/aae-export-windows/: aae-export.py  generate.sh
snippets/: Fix Multiline fax.json  Fix Vertical Source Han.json  VerticalMask.moon
tools/alua/: Cargo.toml
tools/alua/src/: comment.rs  lib.rs  main.rs
vapoursynth/: tkinter_alternatives.py
(+152 files in other folders)
