[package]
name = "alua"
categories = ["text-processing"]
keywords = ["lua"]
description = "Akatsumekusa's Lua preprocessor"
version = "0.1.0"
authors = ["Akatsumekusa <Akatsumekusa@protonmail.com>"]
license = "MIT"
repository = "https://github.com/Akatmks/Akatsumekusa-Aegisub-Scripts"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ansi_color_code"]
ansi_color_code = []

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["path"] }
